--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
   "type": "module",
   "dependencies": {
     "@prisma/client": "^4.11.0",
-    "fastify": "^4.14.1"
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "@tsconfig/node18": "^1.0.1",
+    "@types/express": "^4.17.17",
     "@types/node": "^18.15.1",
     "prisma": "^4.9.0",
     "ts-node": "^10.9.1",
