--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "type": "module",
   "dependencies": {
     "@prisma/client": "^4.11.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-validator": "^6.15.0",
+    "glob": "^9.3.0"
   },
   "devDependencies": {
     "@tsconfig/node18": "^1.0.1",
