--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "type": "module",
   "dependencies": {
     "@prisma/client": "^4.11.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-validator": "^6.15.0",
     "glob": "^9.3.0"
   },
   "devDependencies": {
     "@tsconfig/node18": "^1.0.1",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^18.15.1",
     "prisma": "^4.9.0",
